Add form to insert donation data via POST request

--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 SKIP_PREFLIGHT_CHECK=true
+REACT_APP_API_URL=https://c16qrcode-backend.onrender.com
 REACT_APP_API_TOKEN=your-api-token-here
-REACT_APP_API_URL=http://localhost:5000
+REACT_APP_API_URL=http://localhost:3000
+GOOGLE_SHEETS_API_KEY=47cbdf077ed7e9999450f58af825d78aefdd2b0c
