Add ngrok support for local testing

--- a/.env
+++ b/.env
@@ -1,5 +1,8 @@
+PORT=3001
 SKIP_PREFLIGHT_CHECK=true
 REACT_APP_API_URL=https://c16qrcode-backend.onrender.com
 REACT_APP_API_TOKEN=your-api-token-here
-REACT_APP_API_URL=http://localhost:3000
 GOOGLE_SHEETS_API_KEY=47cbdf077ed7e9999450f58af825d78aefdd2b0c
+SKIP_PREFLIGHT_CHECK=true
+REACT_APP_API_URL=http://localhost:3000
+REACT_APP_BASE_URL=https://1bf2-113-190-59-7.ngrok-free.app
